[package]
edition = "2021"
name = "ssh-log-cli"
version = "0.1.0"

[dependencies]
base64 = "0.13.0"
bincode = "1.3.3"
byteorder = "1.4.3"
chrono = "0.4.19"
clap = {version = "3.0.0", features = ["derive"]}
hex = "0.4.2"
hpke = {version = "0.8.0", features = [
  "serde_impls",
]}
rand = "0.8.4"
readext = "0.1.0"
serde = {version = "1.0.130", features = ["derive"]}
serde_json = "1.0.68"
tempfile = "3.3.0"
thiserror = "1.0.20"
walkdir = "2.3.2"
zip = "0.6.2"

[dev-dependencies]
assert_cmd = "2.0.2"
assert_fs = "1.0.6"

[profile.release]
lto = true
